cmake_minimum_required(VERSION 3.15)

project(json-maker
        VERSION 1.1.0.0
        DESCRIPTION "JSON Maker is a C library used to code JSON objects in null-terminated strings."
        HOMEPAGE_URL "https://github.com/rafagafe/json-maker/blob/master/makefile"
        LANGUAGES C
        )

add_subdirectory(src)